--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1,86 +1,89 @@
 .container {
-    height: 95vh;
-    max-height: 95vh;
+    height: 100vh;
+    max-height: 100vh;
     background: #000000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    .title{
-        width: 500px;
-        font-size: 4em;
-        color: white;
-        text-align: center;
-        .typeWrite {
-            font-size: 0.5em;
-            color: green;
-        }
-        .line {
-            border: 2px dashed rgb(255, 255, 255); 
-            width: 100%; 
-            margin: auto; 
-            margin-top: 5%; 
-            margin-bottom: 5%;
-        }
-        .btn-box {
-            .btn-submit {
-                all: unset;
-                width: 100px;
-                height: 30px;
-                font-size: 20px;
-                background: transparent;
-                border: none;
-                position: relative;
-                color: #f0f0f0;
-                cursor: pointer;
-                z-index: 1;
-                padding: 10px 20px;
-                white-space: nowrap;
-                user-select: none;
-                -webkit-user-select: none;
-                touch-action: manipulation;
-                &::after,
-                &::before {
-                    content: '';
-                    position: absolute;
-                    bottom: 0;
-                    right: 0;
-                    z-index: -99999;
-                    transition: all .4s;
-                }
-                &::before {
-                    transform: translate(0%, 0%);
-                    width: 100%;
-                    height: 100%;
-                    background: #28282d;
-                    border-radius: 10px;
-                }
-                &::after {
-                    transform: translate(10px, 10px);
-                    width: 35px;
-                    height: 35px;
-                    background: #ffffff15;
-                    backdrop-filter: blur(5px);
-                    -webkit-backdrop-filter: blur(5px);
-                    border-radius: 50px;
-                }
-                &:hover::before {
-                    transform: translate(5%, 20%);
-                    width: 110%;
-                    height: 110%;
-                }
-                &:hover::after {
-                    border-radius: 10px;
-                    transform: translate(0, 0);
-                    width: 100%;
-                    height: 100%;
-                }
-                &:active::after {
-                    transition: 0s;
-                    transform: translate(0, 5%);
+    color: white;
+    .title-box {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .title{
+            width: 500px;
+            font-size: 4em;
+            color: #BDB76B;
+            text-align: center;
+            .typeWrite {
+                font-size: 0.5em;
+                color: 	#7FFF00;
+            }
+            .line {
+                border: 2px dashed rgb(255, 255, 255); 
+                width: 100%; 
+                margin: auto; 
+                margin-top: 5%; 
+                margin-bottom: 5%;
+            }
+            .btn-box {
+                .btn-submit {
+                    all: unset;
+                    width: 100px;
+                    height: 30px;
+                    font-size: 20px;
+                    background: transparent;
+                    border: none;
+                    position: relative;
+                    color: #f0f0f0;
+                    cursor: pointer;
+                    z-index: 1;
+                    padding: 10px 20px;
+                    white-space: nowrap;
+                    user-select: none;
+                    -webkit-user-select: none;
+                    touch-action: manipulation;
+                    &::after,
+                    &::before {
+                        content: '';
+                        position: absolute;
+                        bottom: 0;
+                        right: 0;
+                        z-index: -99999;
+                        transition: all .4s;
+                    }
+                    &::before {
+                        transform: translate(0%, 0%);
+                        width: 100%;
+                        height: 100%;
+                        background: #28282d;
+                        border-radius: 10px;
+                    }
+                    &::after {
+                        transform: translate(10px, 10px);
+                        width: 35px;
+                        height: 35px;
+                        background: #ffffff15;
+                        backdrop-filter: blur(5px);
+                        -webkit-backdrop-filter: blur(5px);
+                        border-radius: 50px;
+                    }
+                    &:hover::before {
+                        transform: translate(5%, 20%);
+                        width: 110%;
+                        height: 110%;
+                    }
+                    &:hover::after {
+                        border-radius: 10px;
+                        transform: translate(0, 0);
+                        width: 100%;
+                        height: 100%;
+                    }
+                    &:active::after {
+                        transition: 0s;
+                        transform: translate(0, 5%);
+                    }
                 }
             }
         }
     }
 }
-
-
