--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -1,36 +1,25 @@
-.line-icons{
-    border-left: 5px solid rgb(255, 255, 255);
-    height: 250px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    position: fixed;
-    right: 5rem;
-    z-index: 3;
-    bottom: 0;
-    color: white;
-}
+@use '../variables/' as *;
 .link-box {
-    width: 150px;
+    width: 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
     position: fixed;
     right: 1rem;
-    color: white;
+    color: rgb(0, 0, 0);
     .link {
         padding: 10%;
         cursor: pointer;
+        font-size: 2em;
         &.active {
-            text-decoration: underline 2px greenyellow;
+            text-decoration: underline 2px $greenyellow;
             text-underline-offset: 0.5em;
-            transition: 300ms ease;
+            transition: 250ms ease;
           }
           &:hover {
-            text-decoration: underline 2px greenyellow;
+            text-decoration: underline 5px $greenyellow;
             text-underline-offset: 0.5em;
-            transition: 300ms ease;
+            transition: 250ms ease;
           }
     }
 }
