--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1,8 +1,11 @@
+@use '../variables' as *;
+
 .container {
     height: 100vh;
     max-height: 100vh;
-    background: #000000;
-    color: white;
+    background-image: linear-gradient(to right, $main , $main2);
+    color: $white;
+    font-family: $font-family;
     .title-box {
         height: 100%;
         width: 100%;
@@ -10,80 +13,41 @@
         justify-content: center;
         align-items: center;
         .title{
-            width: 500px;
-            font-size: 4em;
-            color: #BDB76B;
+            width: 550px;
+            font-size: 4.5em;
+            color: $white;
             text-align: center;
             .typeWrite {
                 font-size: 0.5em;
-                color: 	#7FFF00;
+                color: 	$greenyellow;
             }
             .line {
-                border: 2px dashed rgb(255, 255, 255); 
+                border: 1px dashed $white; 
                 width: 100%; 
                 margin: auto; 
                 margin-top: 5%; 
                 margin-bottom: 5%;
             }
-            .btn-box {
-                .btn-submit {
-                    all: unset;
-                    width: 100px;
-                    height: 30px;
-                    font-size: 20px;
-                    background: transparent;
-                    border: none;
-                    position: relative;
-                    color: #f0f0f0;
-                    cursor: pointer;
-                    z-index: 1;
-                    padding: 10px 20px;
-                    white-space: nowrap;
-                    user-select: none;
-                    -webkit-user-select: none;
-                    touch-action: manipulation;
-                    &::after,
-                    &::before {
-                        content: '';
-                        position: absolute;
-                        bottom: 0;
-                        right: 0;
-                        z-index: -99999;
-                        transition: all .4s;
-                    }
-                    &::before {
-                        transform: translate(0%, 0%);
-                        width: 100%;
-                        height: 100%;
-                        background: #28282d;
-                        border-radius: 10px;
-                    }
-                    &::after {
-                        transform: translate(10px, 10px);
-                        width: 35px;
-                        height: 35px;
-                        background: #ffffff15;
-                        backdrop-filter: blur(5px);
-                        -webkit-backdrop-filter: blur(5px);
-                        border-radius: 50px;
-                    }
-                    &:hover::before {
-                        transform: translate(5%, 20%);
-                        width: 110%;
-                        height: 110%;
-                    }
-                    &:hover::after {
-                        border-radius: 10px;
-                        transform: translate(0, 0);
-                        width: 100%;
-                        height: 100%;
-                    }
-                    &:active::after {
-                        transition: 0s;
-                        transform: translate(0, 5%);
-                    }
-                }
-            }
         }
     }
+}
+.custom-shape-divider-bottom-1652590563 {
+    position: absolute;
+    bottom: -1%;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+}
+
+.custom-shape-divider-bottom-1652590563 svg {
+    position: relative;
+    display: flex;
+    width: calc(100%);
+    height: 300px;
+}
+
+.custom-shape-divider-bottom-1652590563 .shape-fill {
+    fill: $white;
 }
