--- a/src/scss/variables/_variables.scss
+++ b/src/scss/variables/_variables.scss
@@ -4,7 +4,7 @@ $main: rgb(24, 24, 24);
 $main2:rgb(152, 151, 151);
 $secondary: #fffdf1;
 $black: #04030f;
-$white: #eef0ec;
+$white: #f9fceb;
 $greenyellow: #b3ff00;
 
 //font
