--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -1,14 +1,15 @@
 @use '../variables/' as *;
 
-
 .container-about {
-    height: 20vh;
-    max-height: 20vh;
+    background-color: $white;
+    height: 30vh;
+    max-height: 30vh;
+    padding: 50px;
+    display: flex;
     justify-content: center;
     align-items: center;
     font-family: $font-family;
     .about {
-        background-color: $white;
         width: 100%;
         top: 0;
         color: $black;
@@ -22,7 +23,10 @@
             margin-left: auto;
             margin-right: auto;
             width: 60%;
+            border-radius: 50px;
             font-size: 1.5em;
+            border: 2px solid $black;
+            padding: 50px;
         }
 }
 
