--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1,11 +1,9 @@
 @use '../variables' as *;
 
-.container {
-    height: 100vh;
-    max-height: 100vh;
+.container-home {
+    color:$white;
+    height: 100%;
     background-image: linear-gradient(to right, $main , $main2);
-    color: $white;
-    font-family: $font-family;
     .title-box {
         height: 100%;
         width: 100%;
@@ -31,9 +29,9 @@
         }
     }
 }
-.custom-shape-divider-bottom-1652590563 {
+.custom-shape-divider-bottom-1652696322 {
     position: absolute;
-    bottom: -1%;
+    bottom: -0.8%;
     left: 0;
     width: 100%;
     overflow: hidden;
@@ -41,13 +39,13 @@
     transform: rotate(180deg);
 }
 
-.custom-shape-divider-bottom-1652590563 svg {
+.custom-shape-divider-bottom-1652696322 svg {
     position: relative;
-    display: flex;
+    display: block;
     width: calc(100%);
-    height: 300px;
+    height: 400px;
 }
 
-.custom-shape-divider-bottom-1652590563 .shape-fill {
+.custom-shape-divider-bottom-1652696322 .shape-fill {
     fill: $white;
 }
